# FileGram

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  dimension_specs.md  pyproject.toml
bench/: README.md  create_excel.py  lmr_calibrated.py  lmr_diagnostic.py  lmr_e_search.py  lmr_multimodel.py  lmr_multimodel_results.json  lmr_validation.py  lmr_validation_results.json  run_ablation.py  run_api_compare.sh  run_cross_backbone.py  run_curve_quick.py  run_eval.py  run_eval.sh  run_tuning.py  test_baselines.py  test_curve.py  test_single.py  tuning_results.json
bench/baselines/: __init__.py  base.py  eager_summarization.py  evermemos_adapter.py  full_context.py  (+11 more)
experiments/: config.json  run.py
filegram/: __main__.py  config.py  main.py
filegramengine/: __init__.py  __main__.py  config.py  main.py
filegramplugin/: README.md  __init__.py  __main__.py  config.py  config.yaml  copy_detector.py  differ.py  exporter.py  main.py  media_store.py  models.py  open_monitor.py  requirements.txt  snapshotter.py  watcher.py
pages/: index.html
profiles/: p10_silent_auditor.yaml  p11_meticulous_planner.yaml  p12_prolific_scanner.yaml  p13_visual_architect.yaml  p14_concise_organizer.yaml  p15_thorough_surveyor.yaml  p16_phased_minimalist.yaml  p17_creative_archivist.yaml  p18_decisive_scanner.yaml  p19_agile_pragmatist.yaml  p1_methodical.yaml  p20_visual_auditor.yaml  p2_thorough_reviser.yaml  p3_efficient_executor.yaml  p4_structured_analyst.yaml  p5_balanced_organizer.yaml  p6_quick_curator.yaml  p7_visual_reader.yaml  p8_minimal_editor.yaml  p9_visual_organizer.yaml  profile_matrix.json
scripts/: WORKFLOW.md  convert_multimodal.py  run_all_200.py  run_trajectory.sh
tasks/: all_tasks.json  coverage.json  coverage_matrix.json  t01.json  t02.json  t03.json  t04.json  t05.json  t06.json  t07.json  t08.json  t09.json  t10.json  t11.json  t12.json  t13.json  t14.json  t15.json  t16.json  t17.json  t18.json  t19.json  t20.json  t21.json  t22.json  t23.json  t24.json  t25.json  t26.json  t27.json  t28.json  t29.json  t30.json  t31.json  t32.json  tasks.json
(+201 files in other folders)
